--- a/hiking.html
+++ b/hiking.html
@@ -117,8 +117,8 @@
 															<a href="#" class="image featured" target="_blank" rel="noopener noreferrer"><img src="https://i.imgur.com/sLsPwli.png" alt="" /></a>
 															<h3><a>Bikčevićeva staza - Sljeme</a></h3>
 															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
+																Bikčevićeva drži titulu najpopularnije planinarske staze na Medvednici.
+															    Tunel Sljeme » Bliznec » Planinarski dom "Ivan Pačkovski" (Puntijarka). Težina: 3/5. Utrošak energije: 3000 KJ. Ukupna duljina 5,5.
 															</p>
 														</section>
 
@@ -131,7 +131,7 @@
 														<h3><a>NP Mljet</a></h3>
 														<p>
 															Montokuc (340 m) je najistaknutiji vrh na krajnjem zapadnom ogranku 
-															vršnog dijela najšumovitijeg jadranskog otoka Mljeta. Ukupna duljina 2,2
+															vršnog dijela najšumovitijeg jadranskog otoka Mljeta. Ukupna duljina 2,2 km.
 														</p>
 													</section>
 
@@ -158,7 +158,7 @@
 															<h3><a>Šetnica kroz Kanal sv. Ante | Tvrđava Sv. Nikole</a></h3>
 															<p>
 																Povezuje područje od uvale Paninkovac do otočića Školjića pred Tvrđavom sv. Nikole.
-																etnica kroz Kanal sv. Ukupna duljina 4,4.
+																etnica kroz Kanal sv. Ukupna duljina 4,4 km.
 															</p>
 														</section>
 
@@ -174,7 +174,7 @@
 														<h3><a>Omiška Dinara</a></h3>
 														<p>
 															Omiška Dinara brdo istočno od Omiša. Najviši vrh je Kula (864 m), koja se nalazi iznad naselja.
-															Čečuci » Omiška Dinara (vrh Kula). Težina: 3/5. Utrošak energije: 2745 KJ. Ukupna duljina 2,3.
+															Čečuci » Omiška Dinara (vrh Kula). Težina: 3/5. Utrošak energije: 2745 KJ. Ukupna duljina 2,3 km.
 														</p>
 													</section>
 
@@ -187,7 +187,7 @@
 														<h3><a>Veliki Kabal</a></h3>
 														<p>
 															Veliki Kabal (1339 m) najviši je vrh Mosora. Sitno Gornje » PD Umberto Girometta » Veliki Kabal. 
-															Težina: 3/5. Utrošak energije: 4374 KJ. Ukupna duljina 4,2.
+															Težina: 3/5. Utrošak energije: 4374 KJ. Ukupna duljina 4,2 km.
 														</p>
 													</section>
 
@@ -200,7 +200,7 @@
 															<h3><a>Kozjak – vrh Sv. Jure</a></h3>
 															<p>
 																Vrh Sveti Jure (667 m), jedan od vrhova na Kozjaku. Kozjak » Vrh Sveti Jure.
-																Težina: 3/5. Utrošak energije: 5283 kJ. Ukupna duljina 5,7.
+																Težina: 3/5. Utrošak energije: 5283 kJ. Ukupna duljina 5,7 km.
 															</p>
 														</section>
 
